# dre-airflow

./: .env  .gitignore  .gitlab-ci  .gitlab-ci.yml  Makefile  README.md  mypy.ini  pack.yaml
.github/: CODEOWNERS
.github/workflows/: airflow-containers.yaml  airflow-content-syncer-container.yaml  airflow-content.yaml  airflow-customized-container.yaml  containers.yaml  main.yaml  rollout-dashboard.yaml
actions/: dummy.py  dummy.yaml
airflow-content-syncer/: Dockerfile  content-syncer
airflow-customized/: Dockerfile
dags/: README.md  auto_compute_rollout.py  defaults.py  deploy_ic_os_to_subnet.py  dre_demo_dag.py  hotfix_ic_os_to_subnets.py  rollout_git_revision_to_subnet.py  rollout_ic_os_to_api_boundary_nodes.py  rollout_ic_os_to_boundary_nodes.py  rollout_ic_os_to_nodes.py  rollout_ic_os_to_nodes_schedule_only.py  rollout_ic_os_to_subnet.py  rollout_ic_os_to_subnets.py  rollout_ic_os_to_subnets_static.py  target_topology.py  test_dag.py
docs/report/: README.md
operators/: ic_api.py  ic_os_rollout.py  timed_python_operator.py
plugins/: operators  sensors
rollout-dashboard/: Dockerfile  README.md
rollout-dashboard/server/: Cargo.toml  deny.toml
rollout-dashboard/server/src/: airflow_client.rs  api_server.rs  frontend_api.rs  lib.rs  main.rs  python.rs  types.rs
rollout-dashboard/server/src/live_state/: api_boundary_nodes_rollout.rs  guestos_rollout.rs  hostos_rollout.rs  log_inspector.rs  mod.rs  plan.rs  python.rs  task_sorter.rs
rollout-dashboard/server/src/live_state/fixtures/: ginormous_python_structure.txt  python_structure_with_tolerances.txt  small_python_structure.txt  typoed_python_structure.txt
sensors/: ic_os_rollout.py  prom_api.py
shared/: README.md
shared/dfinity/: dre.py  (+9 more)
tests/: registry.json  test_dag_loads.py  test_hostos_rollout.py  test_hotfix_planner.py  test_ic_os_rollout.py  test_ic_os_rollout_operators.py  test_ic_os_rollout_sensors.py  test_plan_generator.py  test_rollout_types.py  test_schedule.py  test_tasks.py
(+59 files in other folders)
