[package]
name = "rollout-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
axum = { version = "0.7.5", features = ["macros"] }
axum-server = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
serde = { version = "1.0.203", features = ["derive", "std"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
topological-sort = "0.2.2"
tower-http = { version = "0.5.2", features = ["fs"] }
urlencoding = "2.1.3"
