[package]
name = "rollout-dashboard"
version = "0.3.0"
edition = "2024"

[features]
trace_python = []

[lib]
name = "rollout_dashboard"
path = "src/lib.rs"

[[bin]]
name = "rollout-dashboard"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["into_iterator"] }
env_logger = "0.11.3"
futures = "0.3.30"
indexmap = { version = "2.3.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.22"
querystring = "1.1.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
serde = { version = "1.0.203", features = ["derive", "std"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
topological-sort = "0.2.2"
tower-http = { version = "0.5.2", features = ["fs"] }
urlencoding = "2.1.3"
